first paragraph and bibliography

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,15 +1,46 @@
-@Manual{rmarkdown,
-    title = {rmarkdown: Dynamic Documents for R},
-    author = {JJ Allaire and Jonathan McPherson and Yihui Xie and Hadley Wickham and Joe Cheng and Jeff Allen},
-    year = {2014},
-    note = {R package version 0.3.3},
-    url = {http://CRAN.R-project.org/package=rmarkdown},
-  }
+@article{king1995replication,
+  title={Replication, replication},
+  author={King, Gary},
+  journal={PS: Political Science \& Politics},
+  volume={28},
+  number={03},
+  pages={444--452},
+  year={1995}
+}
 
-@article{xie2013knitr,
-  title={knitr: A General-Purpose Package for Dynamic Report Generation in R},
-  author={Yihui Xie},
-  year={2014},
-  note = {R package version 1.8},
+@article{carsey2014making,
+  title={Making DA-RT a Reality},
+  author={Carsey, Thomas M},
+  journal={PS: Political Science \& Politics},
+  volume={47},
+  number={01},
+  pages={72--77},
+  year={2014}
+}
 
+@article {demesquita2003symposium,
+author = {Bueno de Mesquita, Bruce and Gleditsch, Nils Petter and James, Patrick and King, Gary and Metelits, Claire and Ray, James Lee and Russett, Bruce and Strand, Håvard and Valeriano, Brandon},
+title = {Symposium on Replication in International Studies Research},
+journal = {International Studies Perspectives},
+volume = {4},
+number = {1},
+pages = {72--107},
+year = {2003}
+}
+
+@article{rich2013publishing,
+  title={Publishing as a Graduate Student: A Quick and (Hopefully) Painless Guide to Establishing Yourself as a Scholar},
+  author={Rich, Timothy S},
+  journal={PS: Political Science \& Politics},
+  volume={46},
+  number={02},
+  pages={376--379},
+  year={2013}
+}
+
+@article{gherghina2013data,
+  title={Data Availability in Political Science Journals},
+  author={Gherghina, Sergiu and Katsanidou, Alexia},
+  journal={European Political Science},
+  year={2013}
 }
