--- a/README.Rmd
+++ b/README.Rmd
@@ -1,20 +1,22 @@
 ---
-title: "PM Replication"
-author: "Danilo Freire and Bastiaan Quast"
-date: "Tuesday, November 25, 2014"
-output: md_document
+title: 'Education, Education: Replications as Pedagogical Tools'
+author: "Danilo Freire and Baastian Quast"
+date: "24/11/2014"
+output: html_document
 bibliography: bibliography.bib
 ---
 
-# Abstract
+## Introduction
+
+The merits of reproducible research are widely acknowledged by scholars in out field [e.g., @demesquita2003symposium; @king1995replication; @rich2013publishing]. Although few political science journals have clear replication policies [@gherghina2013data] and replications are still not published as much as they should [@carsey2014making], there is a growing debate on how to make the discipline more open and reproducible. One of the most important areas of discussion concerns the role of replication techniques in graduate education. In this brief text, we argue that replication can help students (and teachers) in three ways: 1) by showing the practical difficulties of statistical work; 2) by familiaring students with cutting-edge research tools, and 3) by helping them to produce a publishable paper.
 
 
-# Introduction
 
 
-# 
 
 
-This document was compiled using [@xie2013knitr] and [@rmarkdown].
 
-# References
+
+
+
+## References
