first paragraph familiarise

--- a/README.Rmd
+++ b/README.Rmd
@@ -17,15 +17,29 @@ The replication of a paper can guide students during the transition from trainin
 At the same time, graduate students are sufficiently knowledgable to undertake a replication relatively independently.
 We identify three key area in which we argue that replication can help students (and teachers): 
 
-1) familiase students with cutting-edge research tools
+1) familiarise students with cutting-edge research tools
 2) experience the practical difficulties of research work (statistical work)
 3) help produce a publishable paper.
 
 In the sections below we will develop these ideas in more detail.
 
 
-## Familiarity with research tools
+## Familiarise with research tools
 
+One of the key benefits of replications is that is introduces students to current research and its practice.
+In many fields, the methodology is rapidly evolving often as a result of more data and data analysis tools.
+
+Computation environments such the R framework [@R] or MatLab [-@MatLab] have greatly facilitated the development and implementation of new methods in both qualitative and quantitative research.
+Personally designed methods can be packaged and made publicly available.
+This had lead to a large rise in the number of algorithms being available, often written by the authors themselves.
+However, non-commericial methods through which these software packages are distributed, combined with the vast number of them,
+can make it a somewhat daunting task determine the right software.
+
+Replications generally concern published and peer-reviewed articles, 
+
+* textual analysis
+* computational simulations
+* data availability -> bring home, make data available
 
 
 
