--- a/bibliography.bib
+++ b/bibliography.bib
@@ -44,3 +44,20 @@ year = {2003}
   journal={European Political Science},
   year={2013}
 }
+
+@Manual{R,
+  title = {R: A Language and Environment for Statistical Computing},
+  author = {{R Core Team}},
+  organization = {R Foundation for Statistical Computing},
+  address = {Vienna, Austria},
+  year = {2014},
+  url = {http://www.R-project.org/},
+}
+
+@Manual{MatLab,
+  title = {MATLAB and Statistics Toolbox},
+  author = {{The MathWorks, Inc.}},
+  address = {Natick, Massachusetts, United States},
+  year = {2014},
+  url = {http://www.mathworks.com/products/matlab/}
+}
