--- a/bibliography.bib
+++ b/bibliography.bib
@@ -84,3 +84,23 @@ year = {2003}
   doi = "http://dx.doi.org/10.1016/j.techfore.2011.12.011",
   author = "Ssu-Han Chen and Mu-Hsuan Huang and Dar-Zen Chen"
 }
+
+@article{bell2013questioning,
+  title={Questioning the Effect of Nuclear Weapons on Conflict},
+  author={Bell, Mark S and Miller, Nicholas L},
+  journal={Journal of Conflict Resolution},
+  pages={0022002713499718},
+  year={2013},
+  publisher={SAGE Publications}
+}
+
+@article{rauchhaus2009evaluating,
+  title={Evaluating the Nuclear Peace Hypothesis A Quantitative Approach},
+  author={Rauchhaus, Robert},
+  journal={Journal of Conflict Resolution},
+  volume={53},
+  number={2},
+  pages={258--277},
+  year={2009},
+  publisher={Sage Publications}
+}
