--- a/bibliography.bib
+++ b/bibliography.bib
@@ -62,29 +62,6 @@ year = {2003}
   url = {http://www.mathworks.com/products/matlab/}
 }
 
-@article{huang2014exploring,
-  year={2014},
-  journal={Scientometrics},
-  volume={98},
-  number={2},
-  doi={10.1007/s11192-013-1054-0},
-  title={Exploring temporal relationships between scientific and technical fronts: a case of biotechnology field},
-  url={http://dx.doi.org/10.1007/s11192-013-1054-0},
-  author={Huang, Mu-Hsuan and Chen, Ssu-Han and Lin, Chia-Ying and Chen, Dar-Zen},
-  pages={1085-1100}
-}
-
-@article{Chen20121099,
-  title = "Identifying and visualizing technology evolution: A case study of smart grid technology ",
-  journal = "Technological Forecasting and Social Change ",
-  volume = "79",
-  number = "6",
-  pages = "1099 - 1110",
-  year = "2012",
-  doi = "http://dx.doi.org/10.1016/j.techfore.2011.12.011",
-  author = "Ssu-Han Chen and Mu-Hsuan Huang and Dar-Zen Chen"
-}
-
 @article{bell2013questioning,
   title={Questioning the Effect of Nuclear Weapons on Conflict},
   author={Bell, Mark S and Miller, Nicholas L},
@@ -103,4 +80,12 @@ year = {2003}
   pages={258--277},
   year={2009},
   publisher={Sage Publications}
+}
+
+@article{fitzjohn2014reproducible,
+  title = {Reproducible research is still a challenge},
+  author = {Rich FitzJohn and Matt Pennell and Amy Zanne and Will Cornwell},
+  year = {2014},
+  date = {June 9},
+  url = {http://ropensci.org/blog/2014/06/09/reproducibility/}
 }
