--- a/README.Rmd
+++ b/README.Rmd
@@ -50,15 +50,17 @@ Public repository website such as GitHub - or self-hosted open-source equivalent
 
 More recently, the rise of continuous integration tools such as Travil CI, have created the additional advantage that code can continuously be tested automatically. For a full discussion of continuous integration in reproducible research see Fitzjohn [-@fitzjohn2014reproducible].
 
-During  the dat aanalysis phase, working with combinations of different package can require quite some technical expertise, especially when a combination of different packages is required.
+During  the data analysis phase, working with combinations of different package can require quite some technical expertise, especially when a combination of different packages is required.
 Q&A sites such as stackoverflow - and more recently the ones based o the open-source equivalent askbot, such as sagemath - allow users to post questions which can be answered by experiences other users (who gain reputation).
-In addition to solving the direct issue of user posting, experienced users often offer other insights about interpretation of results, 
+In addition to solving the direct issue of user posting, experienced users often offer other insights about, for instance,
+additional problems in the approach,
+new methods / tools that could be used,
+interpretation of results.
 
+In addition to Q&A sites, there are also platforms specifically dedicated to data interpretation.
+Figshare for example is an open access platform where graphs from base graphics or ggplot2 can 
 
-* Robustness to specification
-* 
-* computational simulations
-* data availability + bring home, make data available
+* Shiny apps
 
 
 ## Practical Difficulties of Research
