--- a/bibliography.bib
+++ b/bibliography.bib
@@ -38,6 +38,16 @@ year = {2003}
   year={2013}
 }
 
+@article{herndon2014does,
+  title={Does high public debt consistently stifle economic growth? A critique of Reinhart and Rogoff},
+  author={Herndon, Thomas and Ash, Michael and Pollin, Robert},
+  journal={Cambridge Journal of Economics},
+  volume={38},
+  number={2},
+  pages={257--279},
+  year={2014}
+}
+
 @article{gherghina2013data,
   title={Data Availability in Political Science Journals},
   author={Gherghina, Sergiu and Katsanidou, Alexia},
